Styling fixes
Chart only displays if there is data for fitness tab. Landing page pie chart chat to col-lg-6 to prevent it from getting too small

--- a/group-shopping-list/src/app/shopping/shopping-list/shopping-list.component.css
+++ b/group-shopping-list/src/app/shopping/shopping-list/shopping-list.component.css
@@ -31,13 +31,3 @@
   margin: 5px;
   animation: action 0.75s alternate infinite;
 }
-mat-list-item {
-  margin: 10px;
-  box-shadow: -2px 8px 20px 0px rgba(0, 0, 0, 0.3);
-  border-radius: 5px;
-  cursor: pointer;
-}
-mat-list-item:hover {
-  transform: scale(1.05);
-  transition: all 300ms ease;
-}
